--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     </head>
 
     <body>
-        
+        <nav class="navbar">
+            <div class="container">
+                <h1>Header Logo</h1>
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+        </nav>
+        <section class="hero"></section>
+        <section class="cards"></section>
+        <section class="quote"></section>
+        <section class="signup"></section>
+        <footer></footer>
     </body>
 </html>
