Add html for hero section and add images directory
Added html structure/content for the page's hero
section. Also added a directory to contain image
assets for the page, including an image for the
hero section.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
                 </ul>
             </div>
         </nav>
-        <section class="hero"></section>
+        <section class="hero">
+            <div class="container">
+                <div class="hero-description-container">
+                    <h2>This website is awesome</h2>
+                    <p>This website has some subtext that goes here under the main 
+                        title. It's a smaller font and the color is lower contrast.
+                    </p>
+                    <button>Sign Up</button>
+                </div>
+                <img src="./images/binary-ball.jpg" alt="Binary Ball">
+            </div>
+        </section>
         <section class="cards"></section>
         <section class="quote"></section>
         <section class="signup"></section>
