--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
         </nav>
         <section class="hero">
             <div class="container">
-                <div class="hero-description-container">
+                <div class="description-container">
                     <h2>This website is awesome</h2>
                     <p>This website has some subtext that goes here under the main 
                         title. It's a smaller font and the color is lower contrast.
                     </p>
                     <button>Sign Up</button>
                 </div>
-                <img src="./images/binary-ball.jpg" alt="Binary Ball">
+                <div class="image-container">
+                    <img src="./images/binary-ball.jpg" alt="Binary Ball">
+                </div>
             </div>
         </section>
         <section class="cards"></section>
