Coded and styled the information section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,37 @@
                 </div>
             </div>
         </section>
-        <section class="cards"></section>
+        <section class="information">
+            <div class="container">
+                <h2>Some random information.</h2>
+                <div class="cards-container">
+                    <div class="card">
+                        <img src="./images/Amanda.JPEG" alt="A picture of Amanda">
+                        <p>This is some subtext under a picture of my beautiful
+                            wife.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/Amanda.JPEG" alt="A picture of Amanda">
+                        <p>This is some subtext under a picture of my beautiful
+                            wife.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/Amanda.JPEG" alt="A picture of Amanda">
+                        <p>This is some subtext under a picture of my beautiful
+                            wife.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="./images/Amanda.JPEG" alt="A picture of Amanda">
+                        <p>This is some subtext under a picture of my beautiful
+                            wife.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="quote"></section>
         <section class="signup"></section>
         <footer></footer>
