--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
                 </div>
             </div>
         </section>
-        <section class="quote"></section>
+        <section class="quote">
+            <div class="container">
+                <blockquote>This is an inspiring quote, or a testimonial from a 
+                    customer. Maybe it's just filling up space, or maybe people will 
+                    actually read it. Who knows? All I know is that it looks nice.
+                </blockquote>
+                <p>-Thor, God of Thunder</p>
+            </div>
+        </section>
         <section class="signup"></section>
         <footer></footer>
     </body>
