--- a/index.html
+++ b/index.html
@@ -71,7 +71,17 @@
                 <p>-Thor, God of Thunder</p>
             </div>
         </section>
-        <section class="signup"></section>
+        <section class="signup">
+            <div class="container">
+                <div class="calltoaction">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right 
+                        over there!
+                    </p>
+                </div>
+                <button>Sign Up</button>
+            </div>
+        </section>
         <footer></footer>
     </body>
 </html>
