--- a/index.html
+++ b/index.html
@@ -73,13 +73,15 @@
         </section>
         <section class="signup">
             <div class="container">
-                <div class="calltoaction">
-                    <h3>Call to action! It's time!</h3>
-                    <p>Sign up for our product by clicking that button right 
-                        over there!
-                    </p>
+                <div class="signup-container">
+                    <div class="calltoaction">
+                        <h3>Call to action! It's time!</h3>
+                        <p>Sign up for our product by clicking that button right 
+                            over there!
+                        </p>
+                    </div>
+                    <button>Sign up</button>
                 </div>
-                <button>Sign Up</button>
             </div>
         </section>
         <footer></footer>
