--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
                 </div>
             </div>
         </section>
-        <footer></footer>
+        <footer>
+            <div class="container">
+                <p>Copyright &copy; The Odin Project 2021</p>
+            </div>
+        </footer>
     </body>
 </html>
